# ups

./: .cvsignore  .gitignore  BUGS  CHANGES  FAQ  INSTALL  Makefile.conf.in  Makefile.in  PAD.xml  README  README.dwarf  README.gdb  README.maintain  README.md  README.multiarch  Ups  configure  configure.in  ifdefs.h.in  repltab  tkups  upsconf.c
gdbconf/: initlist  mkcalltree  mkccinfo  mkfunclist  mkupsgdb  mungeinit  mungemakefile  srcmunge  zapcalls
interpreter/: Makefile.in  README
interpreter/docs/: Interpreter.txt  InterpreterVM.txt  Tutorial.txt
interpreter/include/: assert.h  ctype.h  errno.h  float.h  limits.h  locale.h  math.h  setjmp.h  signal.h  stdarg.h  stddef.h  stdio.h  stdlib.h  string.h  time.h  wchar.h  wctype.h
interpreter/tests/: README
interpreter/tutorial/: Cinterpreter.c  Cinterpreter.h  Makefile.in  add.c  example1.c  example2.c  example3.c  example4.c  example5.c  example6.c  hello.c  typeof.c  typeof2.c
lib/: Makefile.in
lib/dwarfdump/: .cvsignore  COPYING  Makefile.in  README  UpsMakefile.in  config.h.in  config.h.in.dwarflib  configure  configure.in  dwarf_names.c  dwarfdump.c  dwarfdump.c.dwarflib  globals.h  makename.c  makename.c.dwarflib  makename.h  print_die.c  print_reloc.c  print_sections.c  print_sections.c.dwarflib  tag_attr.c  tag_attr.list  tag_tree.c  tag_tree.list
lib/libMen3/: Makefile.in  marea.c  mclose.c  mcreate.c  mdisplay.c  mdup.c  menu3.h  menu_priv.h  mfmodes.c  minfo.c  minsert.c  mnewcap.c  mopen.c  mperror.c  msize.c  mstdfont.c  sccsdata.c  sccsdata.h  wdbyte.c  wdbyte.h
lib/libarg/: Makefile.in  arg.h  arg_brace.c  arg_dir.c  arg_glob.c  arg_lparse.c  arg_match.c  arg_quote.c  arg_redir.c  arg_user.c  arg_vec.c  arg_version.c  sccsdata.c  sccsdata.h  testarg.c
lib/libdwarf/: .cvsignore  COPYING  ChangeLog  Makefile.in  NEWS  README  UpsMakefile.in  common.c  common.h  config.h.in  configure  configure.in  dwarf.h  dwarf.v2.mm  dwarf.v2.ps  dwarf_alloc.c  dwarf_arange.c  dwarf_die_deliv.c  dwarf_frame.c  dwarf_frame2.c  dwarf_init_finish.c  dwarf_line.c  dwarf_loc.c  dwarf_macro.c  dwarf_macro.h  dwarf_names.c  dwarf_names.h  dwarf_names_enum.h  dwarf_names_new.h  dwarf_opaque.h  dwarf_print_lines.c  dwarf_query.c  dwarf_ranges.c  dwarf_sort_line.c  dwarf_util.c  index.v2.ps  libdwarf.h  libdwarf.h.in  libdwarf2.1.mm  libdwarf2.1.ps  (+4 more)
lib/libdwarf/cmplrs/: dwarf_addr_finder.h
lib/libedit/: Makefile.in  README  display.c  display.h  edit.c  edit.h  filebuf.c  filebuf.h  flines.c  keymap.c  lbuf.c  lbuf.h  props.c  props.h  render.c  render.h  sccsdata.c  sccsdata.h  simplebuf.c  simplebuf.h  sline.c  testedit.c  textbuf.h  util.c  version.c  win.c  win.h
lib/libelf/: .cvsignore  Makefile.in  UpsMakefile.in  acconfig.h  aclocal.m4  aclocal.m4.elflib  config.h.in  configure  configure.in  configure.in.elflib
lib/libgnu/: Makefile.in  README  config.h  cp-demangle.c  cplus-dem.c  ups-if.c
lib/libmtrprog/: Makefile.in  alloc.h  appltofl.c  e_close.c  failmesg.c  fmtostr.c  fopnew.c  fttostr.c  genmergesort.h  hash.c  hash.h  io.h  is_number.c  memxxx.c  mtrprog_vers.c  onpath.c  query_user.c  read_chunk.c  regex.c  regex.h  rm_rf.c  sccsdata.c  sccsdata.h  serverhost.c  serverhost.h  so.c  so.h  strcache.c  strcache.h  strtobsz.c  strtod.c  swap_longs.c  utils.h
lib/libobj/: Makefile.in  fed.c  fed.h  mhole.c  mhole.h  newtb.c  newtb.h  o_chds.c  o_def.c  o_disp.c  o_disp.h  o_globals.c  o_lptrs.c  o_lptrs.h  o_mkobj.c  o_mkobj.h  o_priv.h  o_sel.c  o_sel.h  o_text.c  obj.h  sccsdata.c  sccsdata.h
lib/libukcprog/: .cvsignore  Makefile.in  alloc.c  basename.c  config.c  e_malloc.c  e_realloc.c  ebuf.c  errf.c  formf.c  fpgetline.c  ip.c  logf.c  panic.c  sccsdata.c  ssplit.c  strf.c  strnf.c  strsave.c  strtol.c  ukcprog.h
lib/libx11wn/: Makefile.in  edump.c  framed.c  framed.h  sccsdata.c  sccsdata.h  testwn.c  wn.h  wn_bm.c  wn_bm.h  wn_color.c  wn_color.h  wn_cu.c  wn_cu.h  wn_event.c  wn_event.h  wn_font.c  wn_framed.c  wn_framed.h  wn_icon.c  wn_icon.h  wn_init.c  wn_init.h  wn_misc.c  wn_misc.h  wn_mrop.c  wn_priv.h  wn_replay.c  wn_replay.h  wn_rop.c  wn_rop.h  wn_sc.c  wn_sc.h  wn_sunframe.c  wn_sunframe.h  wn_win.c  wn_win.h  wn_xrop.c  wn_xrop.h
med3/: Makefile.in  README  bmdiv.c  bmenu.c  bmenu.h  bmstack.c  box.c  coords.c  cpats.c  cursor.c  cursors.h  font.h  fonts.c  layout.h  med3.c  med3.h  menu.c  mhole.c  rvals.c  rw.c  sccsdata.c  strings.c
med3/doc/: Mchange.l  Mclear.l  Mclose.l  Mdisplay.l  Mdup.l  Menus.l  Mfmodes.l  Mfonts.l  Minsert.l  Mmake.l  Mnonsel.l  Mopen.l  Mperror.l  Mplace.l  Mpushsu.l  Mredraw.l  Mremove.l  Mreset.l  Mrvalue.l  Mselect.l  Msize.l  Mstdfont.l  appendix_a  med3.l  paper
packaging/: Makefile.in  build_rpmspec.sh  fb_makefile  ups-rpm-spec  ups.sh  ups.spec  ups.wmconfig
tests/: Makefile.in  Makefile2.in  README  Templates3.cc  Templates3x.cc  Templates3x.h  _sd.c  assertion.c  config.h.in  configure  configure.in  coredump.c  datatype.c  dw_array.c  dw_bitfield.c  dw_ctype.c  dw_hello.cc  dw_inline.c  dw_node.cc  dw_node.h  dw_node_main.cc  dw_struct.c  dw_typedef.c  dwf1.c  dwf2.c  dynamic_libs.txt  enums.c  gcc_opt_reg.c  hello.c  interp_stop.c  list_to_bpts.pl  pippo2.f  recurse.c  reg_ll.c  reg_test.c  register.c  sleepfor.c  test1_f.f  test2_c.c  test2_foo.c  (+5 more)
ups/: .cvsignore  Makefile.in  README  ao.h  ao_aflist.c  ao_aflist.h  ao_aout.c  ao_aout.h  ao_asm.h  ao_core.c  ao_core.h  ao_dwarf.c  ao_dwarf.h  ao_dwfname.c  ao_dwfname.h  ao_dwfsyms.c  ao_dwfsyms.h  ao_dwftext.c  ao_dwftext.h  ao_dwftype.c  ao_dwftype.h  ao_dwfutil.c  ao_dwfutil.h  ao_elfcore.c  ao_elfcore.h  ao_elflib.c  ao_elflib.h  ao_elfpriv.h  ao_elfread.c  ao_elfread.h  ao_elfread32.c  ao_elfread64.c  ao_elfreadbase.c  ao_elfsym.c  ao_elfsym.h  ao_execinfo.h  ao_ifdefs.h  ao_procfs.c  ao_procfs.h  ao_pt_regs.c  (+187 more)
ups-state/: Makefile.in
ups/cursors/: README  START
ups/doc/: helptext.man  linking.ms  porting.ms  refs.refer  ups.man  upsman.html
ups/menus/: GLUEMENUS  README  blockmen.c  bphmen.c  bptmen.c  cbhmen.c  cblockmen.c  cmdmen.c  coremen.c  envheadmen.c  (+23 more)
(+172 files in other folders)
